--- a/ProjetoCinema.Web/Views/Home/Index.cshtml
+++ b/ProjetoCinema.Web/Views/Home/Index.cshtml
@@ -3,6 +3,40 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Netflix</h1>
+</div>
+
+<div class="text-center">
+    <h1 class="Frase-central">Filmes Favoritos Da Galera</h1>
+</div>
+
+<div class ="container">
+    <div class ="magia">
+    <img src="~/images/unnamed.png" alt="foto-de-filmes">
+    </div>
+    <div class= "terror">
+<img src="~/images/Halloween.jpg" alt="foto-de-filmes">
+    </div>
+</div>
+
+<div class="formulario-container">
+    <div>
+        <label for="input-Login">Login</label>
+        <input type="text" id="usuario-login">
+        <label for="input-senha">Senha</label>
+        <input type="password" id="usuario-senha">
+
+    </div>
+</div>
+
+<div class="botao">
+    <button type="button">Entrar</button>
+</div>
+
+<div class="text-center">
+    <h2 class="frase-inscrever">Ainda não tem uma conta? Se inscreva!</h2>
+</div>
+
+<div class="botao-inscreva">
+    <button type="button">Inscreva-se</button>
 </div>
