--- a/ProjetoCinema.Web/Views/Home/Index.cshtml
+++ b/ProjetoCinema.Web/Views/Home/Index.cshtml
@@ -2,41 +2,29 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Netflix</h1>
+<div class="netflix">
+    <img src="~/images/logo-netflix-outros.png" alt="foto-de-logo-netflix">
 </div>
-
-<div class="text-center">
-    <h1 class="Frase-central">Filmes Favoritos Da Galera</h1>
-</div>
-
-<div class ="container">
-    <div class ="magia">
-    <img src="~/images/unnamed.png" alt="foto-de-filmes">
-    </div>
-    <div class= "terror">
-<img src="~/images/Halloween.jpg" alt="foto-de-filmes">
-    </div>
-</div>
-
+  
 <div class="formulario-container">
     <div>
-        <label for="input-Login">Login</label>
-        <input type="text" id="usuario-login">
+        <label for="input-login">Login</label>
+        <input type="text" id="input-login" placeholder="Enter Login">
         <label for="input-senha">Senha</label>
-        <input type="password" id="usuario-senha">
-
+        <input type="password" id="input-senha" placeholder="Enter Password">
+    
     </div>
 </div>
-
+ 
 <div class="botao">
     <button type="button">Entrar</button>
 </div>
 
-<div class="text-center">
-    <h2 class="frase-inscrever">Ainda não tem uma conta? Se inscreva!</h2>
+<div class="formulario-inscrever">
+    <div class="frase-inscrever">Ainda não tem conta? Inscreva-se!</div>
 </div>
 
-<div class="botao-inscreva">
+<div class="botao-inscrever">
     <button type="button">Inscreva-se</button>
 </div>
+ 
