--- a/ProjetoCinema.Web/wwwroot/css/site.css
+++ b/ProjetoCinema.Web/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 html {
   font-size: 14px;
 }
-
+  
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -19,6 +19,7 @@ html {
 
 body {
   margin-bottom: 60px;
+  background: #e46969
 }
 
 .magia {
@@ -50,4 +51,37 @@ img {
   left: 50%; 
   transform: translate(-50%, -50%); 
   margin: auto;
+  border: 1px solid white;
+  border-radius: 10px;
+  width: 900px;
+  height: 200px;
+  background: white;
+  max-width: 640px;
+  padding: 20px;
+}   
+
+label, input, button {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  border: none;
+}
+
+.netflix {
+  width: 300px;
+  height: 90px;
+  margin: 0 auto;
+}
+
+.netflix img {
+  width: 100%;
+  height: 300%;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+.frase-inscrever {
+  position: relative;
+  top: 0%;
+  
 }
