--- a/ProjetoCinema.Web/Views/Shared/_Layout.cshtml
+++ b/ProjetoCinema.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/ProjetoCinema.Web.styles.css" asp-append-version="true" />
 </head> 
 <body>
-    <header style="background-color:rgb(255, 251, 250);">
+    <header style="background-color:rgb(#e46969);">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ProjetoCinema</a>
@@ -25,8 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Filmes" asp-action="Index">Filmes</a>
                         </li>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Foto" asp-action="Index">Foto</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cadastrar" asp-action="Index">Cadastrar</a>
                         </li>
                     </ul>
                 </div>
