--- a/ProjetoCinema.Web/Views/Home/Index.cshtml
+++ b/ProjetoCinema.Web/Views/Home/Index.cshtml
@@ -8,23 +8,15 @@
   
 <div class="formulario-container">
     <div>
-        <label for="input-login">Login</label>
-        <input type="text" id="input-login" placeholder="Enter Login">
-        <label for="input-senha">Senha</label>
-        <input type="password" id="input-senha" placeholder="Enter Password">
+        <label for="input-login">Login: </label>
+        @* <input type="text" id="input-login" placeholder="Enter Login"> *@
+        <label for="input-senha">Senha: </label>
+        @* <input type="password" id="input-senha" placeholder="Enter Password"> *@
     
     </div>
 </div>
  
 <div class="botao">
     <button type="button">Entrar</button>
-</div>
-
-<div class="formulario-inscrever">
-    <div class="frase-inscrever">Ainda não tem conta? Inscreva-se!</div>
-</div>
-
-<div class="botao-inscrever">
-    <button type="button">Inscreva-se</button>
-</div>
+</div> 
  
