--- a/ProjetoCinema.Web/Views/Funcionario/index.cshtml
+++ b/ProjetoCinema.Web/Views/Funcionario/index.cshtml
@@ -35,6 +35,9 @@
     urls: {
       cadastrar: '@Url.Action("cadastrar", "funcionario")',
       listar: '@Url.Action("listar", "funcionario")',
-        }
+      excluir: '@Url.Action("excluir", "funcionario")',
+      viewEditar: '@Url.Action("editar", "funcionario")',
+      editar: '@Url.Action("editar", "funcionario")'
+      }
   });
 </script>
