--- a/ProjetoCinema.Web/Views/Funcionario/index.cshtml
+++ b/ProjetoCinema.Web/Views/Funcionario/index.cshtml
@@ -10,7 +10,7 @@
     <input type="hidden" asp-for="DataContratado">
   <div class="col-md-6">
     <label for="inputPassword4" class="form-label">Salario</label>
-    <input type="text" class="form-control" asp-for="Salario">
+    <input type="number" class="form-control" asp-for="Salario">
   </div>
   <div class="col-md-4">
   </div>
@@ -23,7 +23,7 @@
   </div>
 </div>
 </form>
- 
+
 <div class="container-editar"></div>
 <div class="container-listar"></div>
 <div class="container-cadastrar"></div>
