--- a/ProjetoCinema.Web/Views/_ViewImports.cshtml
+++ b/ProjetoCinema.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ProjetoCinema.Web
-@using ProjetoCinema.Web.Models
+@using ProjetoCinema.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
