--- a/ProjetoCinema.Web/Views/Shared/_Layout.cshtml
+++ b/ProjetoCinema.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProjetoCinema.Web.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/iziToast/css/iziToast.min.css">
 </head> 
 <body>
     <header style="background-color:rgb(#e46969);">
@@ -49,5 +50,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/iziToast/js/iziToast.min.js"></script>
 </body>
 </html>
+
